--- a/backend/package.json
+++ b/backend/package.json
@@ -9,13 +9,14 @@
   "author": "Aditya Thorat",
   "license": "ISC",
   "dependencies": {
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "crypto-js": "^4.1.1",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.4.3",
+    "mongoose": "^6.5.1",
     "nodemon": "^2.0.19",
-    "stripe": "^9.12.0"
+    "stripe": "^10.0.0"
   }
 }
