--- a/backend/package.json
+++ b/backend/package.json
@@ -10,14 +10,12 @@
   "author": "Aditya Thorat",
   "license": "ISC",
   "dependencies": {
-    "cookie-parser": "^1.4.6",
+    "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
-    "crypto-js": "^4.1.1",
-    "dotenv": "^16.0.1",
-    "express": "^4.18.1",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.5.1",
-    "nodemon": "^2.0.19",
-    "stripe": "^10.0.0"
+    "crypto": "^1.0.1",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^7.0.3"
   }
 }
